// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Html/> should render a html 1 1`] = `
<Fragment>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<h1>test1</h1>",
      }
    }
  />
</Fragment>
`;

exports[`<Html/> should render a html 2 1`] = `
<Fragment>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<h1>test2</h1>",
      }
    }
  />
</Fragment>
`;

exports[`<Html/> should render a html 3 without data 1`] = `
<Fragment>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<h1>test3</h1>",
      }
    }
  />
</Fragment>
`;

exports[`<Html/> should render a html with data and resolvePlaceholders = false 1`] = `
<Fragment>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<h1>name is :name , surname id :surname</h1>",
      }
    }
  />
</Fragment>
`;

exports[`<Html/> should render a html with data and resolvePlaceholders = false 2`] = `
<div>
  <h1>
    name is Tom , surname id Sower
  </h1>
</div>
`;

exports[`<Html/> should render a html with data and resolvePlaceholders = true 1`] = `
<Fragment>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<h1>name is Tom , surname id Sower</h1>",
      }
    }
  />
</Fragment>
`;

exports[`<Html/> should render html 1 1`] = `
<Fragment>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<h1>test1</h1>",
      }
    }
  />
</Fragment>
`;

exports[`<Html/> should render html 2 1`] = `
<Fragment>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<h1>test2</h1>",
      }
    }
  />
</Fragment>
`;

exports[`<Html/> should render html 3 without data 1`] = `
<Fragment>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<h1>test3</h1>",
      }
    }
  />
</Fragment>
`;

exports[`should render a html with data and resolvePlaceholders = false 1`] = `
<div>
  <h1>
    name is Tom , surname id Sower
  </h1>
</div>
`;
